# credit_mutuel_pdf_extractor

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Justfile  README.md  config.example.yaml  main.py  pyproject.toml
credit_mutual_pdf_extractor/: main.py
src/credit_mutuel_pdf_extractor/: main.py  utils.py
